--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,50 @@
 {
-	"name": "ibrand/laravel-sms",
+	"name": "telanflow/laravel-sms",
 	"type": "library",
-	"description": "ibrand laravel sms base overtrue's easy-sms",
+	"description": "telanflow laravel sms base overtrue's easy-sms",
 	"keywords": [
 		"ibrand",
-		"laravel sms"
+		"laravel sms",
+		"telanflow"
 	],
 	"license": "MIT",
 	"authors": [
 		{
 			"name": "shjchen",
 			"email": "ibrand.shjchen@foxmail.com"
+		},
+		{
+			"name": "telanflow",
+			"email": "telanflow@gmail.com"
 		}
 	],
 	"require": {
-		"php": ">=7.0",
-		"overtrue/easy-sms": "~1.0",
-		"doctrine/dbal": "^2.5"
+		"php": "^8.0 | ^8.1",
+		"overtrue/easy-sms": "^1.3",
+		"doctrine/dbal": "^3.3"
 	},
 	"require-dev": {
-		"mockery/mockery": "~0.9",
-		"phpunit/phpunit": "~6.0",
-		"orchestra/testbench": "~3.5"
+		"mockery/mockery": "^1.4",
+		"phpunit/phpunit": "^9.5",
+		"orchestra/testbench": "^7.1"
 	},
 	"autoload": {
 		"psr-4": {
-			"iBrand\\Sms\\": "src/"
+			"Telanflow\\Sms\\": "src/"
 		}
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"iBrand\\Sms\\Test\\": "tests/"
+			"Telanflow\\Sms\\Test\\": "tests/"
 		}
 	},
 	"extra": {
 		"laravel": {
 			"providers": [
-				"iBrand\\Sms\\ServiceProvider"
+				"Telanflow\\Sms\\ServiceProvider"
 			],
 			"aliases": {
-				"Sms": "iBrand\\Sms\\Facade"
+				"Sms": "Telanflow\\Sms\\Facade"
 			}
 		}
 	}
